# Speaky-Serialize-Deserialize-Library

./: CMakeLists.txt  deserialize.h  message.proto  new_connection.proto  proto_classes_wrapper.h  serialize.h
uml/: class_diagram.puml
